backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: exam
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000 
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: adamelkt/k8s_backend:1.0.0
        ports:
        - containerPort: 5000
          name: backend-port
