database.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: exam
spec:
  selector: 
    app: mongodb
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017 
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
  namespace: exam
spec:
  replicas: 2
  serviceName: "mongodb-service"
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongodb
          image: mongo:5.0
          ports:
            - containerPort: 27017
              name: db-port
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
            - name: mongo-init
              mountPath: /docker-entrypoint-initdb.d
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: mongo-init
          configMap:
            name: mongodb-init-config
  volumeClaimTemplates:
    - metadata:
        name: mongo-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
